# solana-attestation-service

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  bun.lockb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/actions/setup/: action.yml
.github/workflows/: examples.yml  npm-publish.yml  rust-integration-tests.yml  rust-lint.yml  rust-tests.yml
cereal_macro/src/: lib.rs
clients/rust/: Cargo.toml
clients/rust/src/: constants.rs  lib.rs  pdas.rs
clients/typescript/: package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
clients/typescript/src/: compressed.ts  constants.ts  index.ts  pdas.ts
clients/typescript/test/: utils.ts
core/src/: lib.rs
examples/rust/attestation-flow-guide/: README.md
examples/rust/attestation-flow-guide/compression-demo/: .gitignore  Cargo.toml
examples/rust/attestation-flow-guide/compression-demo/src/: main.rs
examples/typescript/: package.json  pnpm-lock.yaml
examples/typescript/attestation-flow-guides/: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
examples/typescript/attestation-flow-guides/src/: attestation-demo.ts
examples/typescript/attestation-flow-guides/src/gill/: sas-compressed-gill-demo.ts  sas-standard-gill-demo.ts  sas-tokenized-gill-demo.ts
examples/typescript/attestation-flow-guides/src/kit/: sas-compressed-kit-demo.ts  sas-standard-kit-demo.ts  sas-tokenized-kit-demo.ts
examples/typescript/attestation-flow-guides/src/lit/: constants.ts  generate-credential-pda.ts  get-keypair.ts  litActionDecrypt.ts  sas-standard-lit-demo.ts  sas-tokenized-lit-demo.ts  types.ts
examples/typescript/attestation-flow-guides/src/lit/lit-actions/: litActionDecrypt.ts  litActionSessionSigs.ts
examples/typescript/attestation-flow-guides/src/lit/lit-helpers/: create-siws-message.ts  decrypt-attestation-data.ts  encrypt-attestation-data.ts  format-siws-message.ts  get-decryption-access-control-conditions.ts  get-pkp-info-from-tx-receipt.ts  get-session-signatures.ts  index.ts  lit-action-decrypt.ts  mint-pkp.ts  setup-lit.ts  sign-siws-message.ts
idl/: solana_attestation_service.json
integration_tests/: Cargo.toml
integration_tests/src/: lib.rs
integration_tests/tests/: test_change_authorized_signers.rs  test_change_schema_description.rs  test_change_schema_status.rs  test_change_schema_version.rs  test_close_attestation.rs  test_close_compressed_attestation.rs  test_compress_attestations.rs  test_compressed_attestation.rs  test_create_attestation.rs  test_create_attestation_with_core_asset.rs  test_create_credential.rs  test_create_schema.rs  test_randomized_serialization.rs  test_tokenization.rs
integration_tests/tests/helpers/: mod.rs
program/: Cargo.toml
program/src/: constants.rs  entrypoint.rs  error.rs  events.rs  instructions.rs  lib.rs  macros.rs
program/src/processor/: change_authorized_signers.rs  change_schema_description.rs  change_schema_status.rs  change_schema_version.rs  change_tokenized_schema_size.rs  close_attestation.rs  close_compressed_attestation.rs  close_tokenized_attestation.rs  compress_attestations.rs  create_attestation.rs  create_attestation_with_token.rs  create_compressed_attestation.rs  create_credential.rs  create_schema.rs  create_tokenized_attestation.rs  emit_event.rs  mod.rs  pause_schema.rs  tokenize_schema.rs
program/src/processor/shared/: account_checks.rs  compress_util.rs  mod.rs  pda_utils.rs
program/src/state/: attestation.rs  credential.rs  discriminator.rs  loaders.rs  mod.rs  schema.rs
program/tests/: test_create_credential.rs
program/tests/helpers/: attestation_service.rs
scripts/: format.sh  generate-clients.js  lint.sh
src/: constants.rs  entrypoint.rs  error.rs  instructions.rs  lib.rs
src/processor/shared/: pda_utils.rs
src/state/: credential.rs  loaders.rs  mod.rs
tests/: test_create_credential.rs
tests/helpers/: mod.rs
