[workspace]

members = [
  "program",
  "cereal_macro",
  "core",
  "clients/rust",
  "integration_tests",
]

exclude = [
  "examples/rust/attestation-flow-guide/standard-demo",
  "examples/rust/attestation-flow-guide/tokenization-demo",
  "examples/rust/attestation-flow-guide/compression-demo",
]

resolver = "2"

package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
borsh = "1.5.5"
const-crypto = "0.3.0"
num-derive = "0.4"
num-traits = "0.2"
pinocchio = "0.9"
pinocchio-log = "0.5"
pinocchio-pubkey = "0.3"
pinocchio-system =  "0.3"
# fork with bumped pinocchio dep of git = "https://github.com/Nagaprasadvr/pinocchio", branch = "feat-add-token-extensions-sas",
pinocchio-token = { git = "https://github.com/Lightprotocol/token22-pinocchio", rev = "6f600c4ee57a4892c1c1112c208faa6b1a14b911"}
pinocchio-associated-token-account = "0.2"
proc-macro2 = "1.0.86"
quote = "1.0.36"
shank = "0.4.2"
solana-attestation-service-macros = { path = "cereal_macro" }
solana-attestation-service-client = { path = "clients/rust" }
solana-program = "2.3.0"
solana-pubkey = "2.3.0"
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
solana-sdk-ids = "2.2.1"
spl-token-2022 = "8.0.1"
spl-associated-token-account = "6.0.0"
spl-token-group-interface = "0.6.0"
spl-token-metadata-interface = "0.7.0"
syn = "2.0.72"
thiserror = { version = "2.0", default-features = false }
tokio = "1.43.0"
bs58 = "0.4"
light-sdk-pinocchio = { version = "0.16.0", default-features = false, features = ["v2"] }
light-sdk-types = { version = "0.16.0", default-features = false, features = ["v2"] }
light-macros = { version = "2.2.0", default-features = false }
light-compressed-account = { version = "0.6.1", default-features = false }
light-hasher = { version = "5.0.0", default-features = false}
# Test dependencies for Compressed Account
light-program-test = { version = "0.16.0", features = ["v2"] }
light-client = { version = "0.16.0", features = ["v2"] }
light-sdk = { version = "0.16.0", features = ["v2"] }
